[gd_scene load_steps=6 format=3 uid="uid://n4c0vqrblvl"]

[ext_resource type="Script" path="res://addons/sgg_graph_plotter/sgg_graph_plotter.gd" id="1_x5nyy"]
[ext_resource type="Script" path="res://addons/sgg_graph_plotter/grid_spreader.gd" id="2_i0nra"]
[ext_resource type="Script" path="res://addons/sgg_graph_plotter/graph_plotter.gd" id="3_jyx06"]
[ext_resource type="Script" path="res://addons/sgg_graph_plotter/scale_emitter.gd" id="4_x6tj4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wg4y3"]
bg_color = Color(0, 0, 0, 1)

[node name="SGGGraphPlotter" type="Panel"]
offset_right = 640.0
offset_bottom = 480.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wg4y3")
script = ExtResource("1_x5nyy")
GRAPH_SCALE = 1

[node name="GridSpreader" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("2_i0nra")

[node name="GraphPlotter" type="Line2D" parent="."]
points = PackedVector2Array(0, 339.911, 6.4, 340.066, 12.8, 339.812, 19.2, 339.15, 25.6, 338.082, 32, 336.613, 38.4, 334.749, 44.8, 332.498, 51.2, 329.868, 57.6, 326.871, 64, 323.519, 70.4, 319.825, 76.8, 315.805, 83.2, 311.475, 89.6, 306.853, 96, 301.957, 102.4, 296.808, 108.8, 291.427, 115.2, 285.835, 121.6, 280.056, 128, 274.114, 134.4, 268.031, 140.8, 261.834, 147.2, 255.548, 153.6, 249.198, 160, 242.811, 166.4, 236.412, 172.8, 230.028, 179.2, 223.685, 185.6, 217.408, 192, 211.224, 198.4, 205.157, 204.8, 199.233, 211.2, 193.475, 217.6, 187.908, 224, 182.554, 230.4, 177.434, 236.8, 172.571, 243.2, 167.983, 249.6, 163.69, 256, 159.708, 262.4, 156.055, 268.8, 152.746, 275.2, 149.793, 281.6, 147.208, 288, 145.004, 294.4, 143.187, 300.8, 141.767, 307.2, 140.748, 313.6, 140.135, 320, 139.931, 326.4, 140.135, 332.8, 140.748, 339.2, 141.767, 345.6, 143.187, 352, 145.004, 358.4, 147.208, 364.8, 149.793, 371.2, 152.746, 377.6, 156.055, 384, 159.708, 390.4, 163.69, 396.8, 167.983, 403.2, 172.571, 409.6, 177.434, 416, 182.554, 422.4, 187.908, 428.8, 193.475, 435.2, 199.233, 441.6, 205.157, 448, 211.224, 454.4, 217.408, 460.8, 223.685, 467.2, 230.028, 473.6, 236.412, 480, 242.811, 486.4, 249.198, 492.8, 255.548, 499.2, 261.834, 505.6, 268.031, 512, 274.114, 518.4, 280.056, 524.8, 285.835, 531.2, 291.427, 537.6, 296.808, 544, 301.957, 550.4, 306.853, 556.8, 311.475, 563.2, 315.805, 569.6, 319.825, 576, 323.519, 582.4, 326.871, 588.8, 329.868, 595.2, 332.498, 601.6, 334.749, 608, 336.613, 614.4, 338.082, 620.8, 339.15, 627.2, 339.812, 633.6, 340.066, 640, 339.911)
width = 2.0
script = ExtResource("3_jyx06")

[node name="ScaleEmitter" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("4_x6tj4")
